// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`is the Anime quote valid All items need to have a episode 1`] = `
Object {
  "episode": Any<Number>,
  "quote": "TEST",
  "title": "",
  "year": 2001,
}
`;

exports[`is the Anime quote valid All items need to have a episode 2`] = `
Object {
  "episode": Any<Number>,
  "quote": "TEST4342342",
  "title": "",
  "year": 2001,
}
`;

exports[`is the Anime quote valid All items need to have a quote 1`] = `
Object {
  "episode": 123,
  "quote": Any<String>,
  "title": "",
  "year": 2001,
}
`;

exports[`is the Anime quote valid All items need to have a quote 2`] = `
Object {
  "episode": 123,
  "quote": Any<String>,
  "title": "",
  "year": 2001,
}
`;

exports[`is the Anime quote valid All items need to have a title 1`] = `
Object {
  "episode": 123,
  "quote": "TEST",
  "title": Any<String>,
  "year": 2001,
}
`;

exports[`is the Anime quote valid All items need to have a title 2`] = `
Object {
  "episode": 123,
  "quote": "TEST4342342",
  "title": Any<String>,
  "year": 2001,
}
`;

exports[`is the Anime quote valid All items need to have a year 1`] = `
Object {
  "episode": 123,
  "quote": "TEST",
  "title": "",
  "year": Any<Number>,
}
`;

exports[`is the Anime quote valid All items need to have a year 2`] = `
Object {
  "episode": 123,
  "quote": "TEST4342342",
  "title": "",
  "year": Any<Number>,
}
`;
